# MemoryAI-API

./: .env.example  .gitignore  COMPLETE_SUMMARY.md  Dockerfile  LANGCHAIN_ARCHITECTURE.md  LANGCHAIN_INTEGRATION_GUIDE.md  LANGCHAIN_QUICK_REFERENCE.md  LANGCHAIN_TESTING_SUMMARY.md  LAUNCH_READINESS_ANALYSIS.md  LOAD_TEST_REPORT.md  MEMORY_AI_COMPLETE_FIX.md  NOTION_FIX_COMPLETE.md  OPTIMIZATION_SUCCESS_REPORT.md  README.md  START_HERE_TESTING.md  check_db_metadata.py  check_memories.py  check_services.sh  debug_memories.py  demo_poe_bot.py  docker-compose.yml  generate_test_token.py  get_api_key_for_tutor.sh  init_database.py  langchain_chatbot_example.py  langchain_quickstart.py  load_test.py  publish-all.sh  test_langchain_integration.py  test_langchain_rl_comprehensive.py  test_memory_ai_full.py  test_memory_create.py  test_metadata_flow.py  test_profile_quick.py  test_profile_system.py  test_rl_memory_direct.py
backend/: __init__.py  main.py  requirements.txt
docs/: API_REFERENCE.md  GETTING_STARTED.md
examples/: README.md  integration_autogen.py  integration_langchain.py  integration_simple_agent.py
k8s/: deployment.yaml
mcp/: .env.example  README.md  claude_desktop_config.json  get_api_key.sh  install.sh  monitor_rl_training.sh  quick_setup.sh  requirements.txt  server.py  server.py.backup  server.py.new
notion-integration/: .env.example  QUICK_START.md  README.md  SIMPLE_GUIDE.md  ask.py  auto_sync_all.py  chat.py  clean_and_resync.py  debug_database.py  debug_page.py  notion_memory_bot.py  poe_bot.py  poe_bot_v2.py  poe_bot_v3_profile_enhanced.py  render.yaml  requirements.txt  search.py  setup.sh  smart_chat.py  sync_database.py  (+2 more)
sdk/python/: .pypirc.example  MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/python/memory_ai/: __init__.py  client.py  resources.py
sdk/python/memory_ai_sdk/: __init__.py  client.py  exceptions.py  resources.py
sdk/python/memory_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+83 files in other folders)
