[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-ai-sdk"
version = "1.0.0"
description = "Simple 3-line integration for AI agents with memory - The most advanced memory API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Memory AI Team", email = "support@memory-ai.com"}
]
maintainers = [
    {name = "Memory AI Team", email = "support@memory-ai.com"}
]
keywords = [
    "ai",
    "memory",
    "agents",
    "llm",
    "chatbot",
    "assistant",
    "ml",
    "reinforcement-learning",
    "knowledge-graph",
    "vector-search",
    "rag"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/memory-ai"
Documentation = "https://docs.memory-ai.com"
Repository = "https://github.com/yourusername/memory-ai"
"Bug Tracker" = "https://github.com/yourusername/memory-ai/issues"
Changelog = "https://github.com/yourusername/memory-ai/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_ai*", "memory_ai_sdk*"]
exclude = ["tests*"]

